--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-    <item name="android:windowDisablePreview">true</item>
-</style>
+    <style name="AppActivityTheme" parent="@style/Theme.Leanback.VerticalGrid" >
+        <item name="android:windowDisablePreview">true</item>
+<!--        <item name="android:windowNoTitle">true</item>-->
+<!--        <item name="android:windowContentOverlay">@null</item>-->
+    </style>
+
 </resources>
